LABS-1389: add Java 14 tests