@@ -1,28 +1,41 @@
-apply plugin: 'java'
+plugins {
+    id 'java'
+}
 
-sourceCompatibility = 1.8
-targetCompatibility = 1.8
-version = '1.0'
+group 'org.example'
+version '1.0-SNAPSHOT'
 
 repositories {
     mavenCentral()
 }
 
-dependencies {
-    testCompile group: 'junit', name: 'junit', version: '4.11'
-    testCompile 'org.webjars.npm:ejs:2.4.1'
-    testCompile group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: '2.8.1'
-    testCompile group: 'org.awaitility', name: 'awaitility', version: '3.0.0'
-    testCompile group: 'org.awaitility', name: 'awaitility-proxy', version: '3.0.0'
+wrapper {
+    gradleVersion = '6.3'
 }
 
-task wrapper(type: Wrapper) {
-    gradleVersion = '2.4'
+compileJava {
+    options.compilerArgs += ['--enable-preview']
+}
+
+compileTestJava {
+    options.compilerArgs += ['--enable-preview']
 }
 
 test {
+    useJUnitPlatform()
+
+    jvmArgs '--enable-preview'
+
     testLogging {
         showStandardStreams = true
         events 'failed', 'passed', 'skipped'
     }
+}
+
+dependencies {
+    testImplementation 'org.junit.jupiter:junit-jupiter:5.6.2'
+    testImplementation 'org.webjars.npm:ejs:2.4.1'
+    testImplementation group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: '2.8.1'
+    testImplementation group: 'org.awaitility', name: 'awaitility', version: '3.0.0'
+    testImplementation group: 'org.awaitility', name: 'awaitility-proxy', version: '3.0.0'
 }
